alsa: Add mapping for PCM F32/F64 formats

Fix enables float pcm formats for both the alsasrc and alsasink

https://bugzilla.gnome.org/show_bug.cgi?id=782695